# PacTune

./: .gitignore  .woodpecker.yaml  ALBUM_COVER_FIX.md  Cargo.toml  FRESH_START.md  ICON_SETUP.md  README.md  create_icons.sh  install.sh  page.codeberg.M23Snezhok.PacTune.json  page.codeberg.M23Snezhok.Vinyl.Devel.json  reinstall.sh
data/: icons.gresource.xml  page.codeberg.M23Snezhok.PacTune.desktop  page.codeberg.M23Snezhok.PacTune.metainfo.xml  page.codeberg.M23Snezhok.PacTune.service  page.codeberg.M23Snezhok.Vinyl.desktop  page.codeberg.M23Snezhok.Vinyl.metainfo.xml  page.codeberg.M23Snezhok.Vinyl.service
src/: about.rs  album_detail.rs  album_item.rs  albumlist.rs  app.rs  drag_overlay.rs  lyrics_item.rs  main.rs  menu.rs  track_item.rs  tracklist.rs
src/backend/: cover_cache.rs  lyrics_fetcher.rs  mod.rs  mpris.rs  player_state.rs  playlist.rs  track_info.rs  utils.rs
