[package]
name = "PacTune"
version = "1.1.0"
authors = ["Mikhail Kostin <m23snezhok@protonmail.com>"]
edition = "2024"
build = "src/build.rs"

[dependencies]
infer = "0.19.0"
lru = "0.16.3"
sha2 = "0.10.9"

[dependencies.serde_json]
package = "serde_json"
version = "1.0.149"

[dependencies.mpris-server]
package = "mpris-server"
version = "0.9.0"

[dependencies.log]
package = "log"
version = "0.4.29"

[dependencies.lyrx]
package = "lyrx"
version = "0.2.2"

[dependencies.rand]
package = "rand"
version = "0.10.0"

[dependencies.async-channel]
package = "async-channel"
version = "2.5.0"

[dependencies.tracker]
package = "tracker"
version = "0.2.2"

[dependencies.walkdir]
package = "walkdir"
version = "2"

[dependencies.relm4]
package = "relm4"
version = "0.10.1"
features = ["libadwaita", "gnome_48"] 

[dependencies.relm4-components]
package = "relm4-components"
version = "0.10.1"

[dependencies.gtk]
package = "gtk4"
version = "0.10.3"

[dependencies.lofty]
package = "lofty"
version = "0.23.3"

[dependencies.gst]
package = "gstreamer"
version = "0.25.1"

[dependencies.gst-audio]
package = "gstreamer-audio"
version = "0.25.0"

[dependencies.gst-play]
package = "gstreamer-play"
version = "0.25.0"

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

[build-dependencies]
glib-build-tools = "0.22.0"
